crates/swc_ecma_parser/tests/typescript-errors/reserved-words/reserved/input.ts.stderr
error: Unexpected token `interface`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/reserved-words/reserved/input.ts:3:9
  |
3 | let a = interface;
  |         ^^^^^^^^^

