crates/swc_ecma_parser/tests/typescript-errors/reserved-words/reserved/input.ts
"use strict";

let a = interface;
